--- a/main.html
+++ b/main.html
@@ -2,100 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Draggable Cubes</title>
+  <title>Draggable Scrollable Items</title>
   <style>
-    body {
-      margin: 0;
-      padding: 20px;
-      font-family: sans-serif;
-      background-color: #f0f0f0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-
-    .container {
-      position: relative;
-      width: 500px;
-      height: 500px;
-      background-color: #fff;
-      border: 3px solid #333;
-      display: grid;
-      grid-template-columns: repeat(4, 100px);
-      grid-template-rows: repeat(4, 100px);
-      gap: 10px;
-      padding: 10px;
-      box-sizing: border-box;
+    .items {
+      width: 300px;
+      height: 100px;
+      overflow-x: scroll;
+      white-space: nowrap;
+      border: 2px solid #000;
     }
 
     .cube {
-      background-color: #3498db;
-      border-radius: 6px;
-      cursor: grab;
-      position: absolute;
-      transition: background-color 0.2s;
+      display: inline-block;
       width: 100px;
       height: 100px;
-      user-select: none;
-    }
-
-    .cube:active {
-      cursor: grabbing;
-      background-color: #2980b9;
+      background-color: #3498db;
+      margin-right: 10px;
     }
   </style>
 </head>
 <body>
 
-<div class="container" id="container">
-  <div class="cube" style="left: 10px; top: 10px;"></div>
-  <div class="cube" style="left: 120px; top: 10px;"></div>
-  <div class="cube" style="left: 230px; top: 10px;"></div>
-  <div class="cube" style="left: 340px; top: 10px;"></div>
+<div class="items">
+  <div class="cube"></div>
+  <div class="cube"></div>
+  <div class="cube"></div>
+  <div class="cube"></div>
+  <div class="cube"></div>
+  <div class="cube"></div>
 </div>
-
-<script>
-  const container = document.getElementById('container');
-  const cubes = document.querySelectorAll('.cube');
-  let selectedCube = null;
-  let offsetX = 0;
-  let offsetY = 0;
-
-  cubes.forEach(cube => {
-    cube.addEventListener('mousedown', (e) => {
-      selectedCube = cube;
-      const rect = cube.getBoundingClientRect();
-      const containerRect = container.getBoundingClientRect();
-      offsetX = e.clientX - rect.left;
-      offsetY = e.clientY - rect.top;
-
-      selectedCube.style.zIndex = 1000;
-    });
-  });
-
-  document.addEventListener('mousemove', (e) => {
-    if (!selectedCube) return;
-
-    const containerRect = container.getBoundingClientRect();
-    let newX = e.clientX - containerRect.left - offsetX;
-    let newY = e.clientY - containerRect.top - offsetY;
-
-    // Clamp position within container bounds
-    newX = Math.max(0, Math.min(newX, container.clientWidth - selectedCube.offsetWidth));
-    newY = Math.max(0, Math.min(newY, container.clientHeight - selectedCube.offsetHeight));
-
-    selectedCube.style.left = `${newX}px`;
-    selectedCube.style.top = `${newY}px`;
-  });
-
-  document.addEventListener('mouseup', () => {
-    if (selectedCube) {
-      selectedCube.style.zIndex = '';
-      selectedCube = null;
-    }
-  });
-</script>
 
 </body>
 </html>
