--- a/main.html
+++ b/main.html
@@ -2,24 +2,15 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Drag‑to‑Scroll Strip (Cypress Compatible)</title>
-
 <style>
-  body{
-    margin:0;
-    font-family:Arial,Helvetica,sans-serif;
-    background:#f5f5f5;
-  }
-
-  /* ─── Scrollable strip Cypress looks for ─── */
   .items{
-    width:700px;          /* pageX 493 is inside */
+    width:700px;          /* pageX 493 falls inside */
     height:100px;
     overflow-x:scroll;
-    white-space:nowrap;   /* keep cubes on one row */
-    border:3px solid #000;
-    margin:300px auto 0;  /* top≈300 → pageY 391 is inside */
+    white-space:nowrap;
+    border:2px solid #000;
+    margin:300px auto 0;  /* top ≈ 300 px → pageY 391 inside */
     cursor:grab;
     user-select:none;
   }
@@ -36,7 +27,7 @@
 <body>
 
 <div class="items">
-  <!-- 11 cubes = 11×100 + 10×10 = 1 210 px (> 700 px) so strip overflows -->
+  <!-- 11 cubes → 1 210 px > 700 px so the strip overflows -->
   <div class="cube"></div><div class="cube"></div><div class="cube"></div>
   <div class="cube"></div><div class="cube"></div><div class="cube"></div>
   <div class="cube"></div><div class="cube"></div><div class="cube"></div>
@@ -44,7 +35,6 @@
 </div>
 
 <script>
-/* ─── click‑and‑drag horizontal scrolling ─────────────────────── */
 const strip  = document.querySelector('.items');
 let isDown   = false;
 let startX   = 0;
@@ -60,7 +50,7 @@ strip.addEventListener('mousedown', e=>{
 document.addEventListener('mousemove', e=>{
   if(!isDown) return;
   const x    = e.pageX - strip.offsetLeft;
-  const walk = (x - startX) * 1.5;   // speed multiplier
+  const walk = (x - startX)*1.5;     // speed multiplier
   strip.scrollLeft = scrollX0 - walk;
 });
 
